--- a/passionautomobile.html
+++ b/passionautomobile.html
@@ -58,7 +58,7 @@
                         </p>
                         <figure>
                             <img src="./images/audi_rs7_abt.jpeg" alt="Photo d'une RS7 ABT" class="paysage">
-                            <figcaption> Figure 2 : Photo de Hayder</figcaption>
+                            <figcaption> Figure 2 : Photo d'une RS7 ABT</figcaption>
                         </figure>
                     </article>
                     <article>
@@ -82,7 +82,7 @@
                         </figure>
                     </article>
                     <article>
-                    <h3>Conclusion</h2>
+                    <h3>Conclusion</h3>
                     <article>
                         <h4>La Route des Rêves </h4>
                         <p>
