--- a/passionautomobile.html
+++ b/passionautomobile.html
@@ -81,7 +81,8 @@
                             <figcaption> Figure 4 : Photo d'une X6M competition</figcaption>
                         </figure>
                     </article>
-                    <article>
+                </article>
+                <article>
                     <h3>Conclusion</h3>
                     <article>
                         <h4>La Route des Rêves </h4>
