--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <title>Hayder et Thibault - Le Site Officiel</title>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <!-- Cette balise est une description du site-->
         <meta name="description" content="Site d'amis étudiants">
         <!-- Cette balise permet de définir des mots-clés pour faciliter la recherche internet-->
