--- a/theatre.html
+++ b/theatre.html
@@ -67,7 +67,7 @@
                         Après la distribution des rôles, l'élan est à son maximum et nous nous entrainons jusqu'en mai pour finalement monter sur scène devant 1600 personnes le temps de 4 soirs.
                     </p>
                     <figure>
-                        <img src="./images/ctlvg5.png" alt="La pièce" class="paysage">
+                        <img src="./images/ctlvg5.PNG" alt="La pièce" class="paysage">
                         <figcaption>Figure 5 : Représentation de Charlie et la Chocolaterie en 2022</figcaption>
                     </figure>
                 </article>
